--- a/components/Sun/Sun.module.css
+++ b/components/Sun/Sun.module.css
@@ -1,7 +1,7 @@
 .sun {
     position: absolute;
-    width: 270px;
-    height: 270px;
+    width: 15vw;
+    height: 15vw;
     border-radius: 50%;
     top: 25%;
     left: 45%;
