--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -125,6 +125,21 @@
     pointer-events: none; /* Evita que el rastro interfiera con la interacción del usuario */
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    transition: opacity 0.2s ease-in-out; 
+    transition: opacity 0.2s ease-in-out;
     opacity: 0.5;/* Agrega transición para una apariencia suave */
+}
+
+.greenSquare {
+    width: 50px;
+    height: 50px;
+    background-color: green;
+    position: absolute;
+    transition: left 0.1s, top 0.1s; /* Para suavizar el movimiento */
+}
+
+.bullet {
+    width: 10px;
+    height: 10px;
+    background-color: lime;
+    position: absolute;
 }
